fixing list of posts alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -171,6 +171,10 @@ a {
     margin: 0 auto;
     @include borderRadius(6px);
     padding: 10px;
+    ul {
+        padding: 0;
+        list-style: none;
+    }
 }
 #post-wrapper {
     height: auto;
@@ -179,7 +183,7 @@ a {
     background-color: darken( #fff, 0% ); /*darken( $emerald, 20% );*/
     margin: 0 auto;
     @include borderRadius(6px);
-    padding: 10px;
+    //padding: 10px;
 }
 #perma-title {
     font-family: Georgia, Times, serif;
@@ -194,6 +198,7 @@ a {
     }
     font-family: Verdana, Arial, sans-serif;
     color: #000;
+    padding: 0.5em;
 }
 
 
